【功能】添加订单和商品相关的基础服务支持

--- a/zeus-server/src/main/resources/static/r/easyui/demo/validatebox/validateonblur.html
+++ b/zeus-server/src/main/resources/static/r/easyui/demo/validatebox/validateonblur.html
@@ -27,8 +27,8 @@
 			<input id="url" class="easyui-validatebox tb" data-options="required:true,validType:'url',validateOnCreate:false,validateOnBlur:true">
 		</div>
 		<div style="margin-bottom:20px">
-			<label for="phone" class="label-top">Phone:</label>
-			<input id="phone" class="easyui-validatebox tb" data-options="required:true,validateOnCreate:false,validateOnBlur:true">
+			<label for="ph" class="label-top">Phone:</label>
+			<input id="ph" class="easyui-validatebox tb" data-options="required:true,validateOnCreate:false,validateOnBlur:true">
 		</div>
 	</div>
 	<style scoped="scoped">
