--- a/zeus-server/src/main/resources/static/r/easyui/demo/validatebox/customtooltip.html
+++ b/zeus-server/src/main/resources/static/r/easyui/demo/validatebox/customtooltip.html
@@ -27,8 +27,8 @@
 			<input id="url" class="easyui-validatebox tb" data-options="prompt:'Enter your URL.',required:true,validType:'url'">
 		</div>
 		<div style="margin-bottom:20px">
-			<label for="phone" class="label-top">Phone:</label>
-			<input id="phone" class="easyui-validatebox tb" data-options="prompt:'Enter your phone number.',required:true">
+			<label for="ph" class="label-top">Phone:</label>
+			<input id="ph" class="easyui-validatebox tb" data-options="prompt:'Enter your ph number.',required:true">
 		</div>
 	</div>
 	<style scoped="scoped">
